feat: add spotlight api for trending events
